# gnuclient

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  SCRIPTING.md
client/: build.gradle  gradle.properties  settings.gradle
client/src/main/java/gnu/client/command/: BindCommand.java
client/src/main/java/gnu/client/module/: Category.java  Module.java  ModuleManager.java
client/src/main/java/gnu/client/module/modules/combat/: AimAssistModule.java  AimAssistModule.java.bak  AntiBotModule.java.bak.antibuild2  AutoBlockModule.java  AutoBlockModule.java.bak  AutoBlockModule.java.bak2  AutoBlockModule.java.bak3  AutoBlockModule.java.bak4  AutoBlockModule.java.bak5  AutoBlockModule.java.bak6  AutoClickerModule.java  AutoClickerModule.java.bak  JumpResetModule.java.bak  KillAuraModule.java  KillAuraModule.java.bak.antibot-20260615-182607Z  RavenAntiBot.java.bak  RavenAntiBot.java.bak.antibot-20260615-182607Z  RavenAntiBot.java.bak.antibuild2  RavenRotationUtils.java  VelocityModule.java  VelocityModule.java.bak  WTapModule.java  WTapModule.java.bak
client/src/main/java/gnu/client/module/modules/movement/: EagleModule.java.bak  GrimFlyModule.java  NoSlowModule.java  SprintModule.java  TimerModule.java
client/src/main/java/gnu/client/module/modules/network/: BacktrackModule.java  KnockbackDelayModule.java  LagrangeModule.java.1781365947.bak  LagrangeModule.java.bak  LagrangeModule.java.session_bak
client/src/main/java/gnu/client/module/modules/player/: BridgeAssistModule.java  BridgeAssistModule.java.bak  ScaffoldModule.java
client/src/main/java/gnu/client/module/modules/settings/: ClickGuiModule.java
client/src/main/java/gnu/client/module/modules/visual/: EspModule.java.bak  FreeLookModule.java  FreeLookModule.java.bak  FreeLookModule.java.precamerahook  HudModule.java  ItemEspModule.java.bak.antibot-20260615-182607Z  NameTagsModule.java.bak.antibot-20260615-182607Z  TracersModule.java.bak.antibot-20260615-182607Z
client/src/main/java/gnu/client/module/setting/: BoolSetting.java  SliderSetting.java
client/src/main/java/gnu/client/runtime/: CameraHook.java.pathb  ClientEventListener.java  EntityLivingBaseHook.java  EntityLivingBaseTransformer.java  EntityPlayerSPTransformer.java  FreeLookHook.java  FreeLookHook.java.bak  GuiIngameTransformer.java  MoveFixHook.java  MoveFixUtil.java  MovementInputHook.java  MovementInputTransformer.java  NativeBootstrap.java  NativeBootstrap.java.bak  PacketTransformer.java  PlayerUpdateHook.java  RotationState.java  VanillaModuleDriver.java  WorldRenderHook.java  WorldRenderTransformer.java  WorldRenderTransformer.java.bak  WorldRenderTransformer.java.pathb  WorldRenderTransformer.java.precamerahook
client/src/main/java/gnu/client/runtime/mc/: ClientDetector.java  MappingTable.java  MappingTable.java.bak  McAccess.java  McAccess.java.bak  McAccess.java.bak.antibot-20260615-182607Z  McAccess.java.bak.antibuild2
client/src/main/java/gnu/client/runtime/packet/: LagrangeOutboundTrack.java  LagrangeOutboundTrack.java.session_bak  LagrangeOutboundTrack_java.bak  PacketEvents.java  PacketHelper.java  PacketHelper.java.bak  PacketListener.java
client/src/main/java/gnu/client/script/: Client.java  GrimState.java  Keybinds.java  Modules.java  Packets.java  ScriptManager.java  Status.java  World.java
injector/: CMakeLists.txt
injector/src/: jvm_attach.cpp  jvm_attach.h  main.cpp  process_scanner.cpp  process_scanner.h
native-agent/: CMakeLists.txt
native-agent/src/: entity_living_base_transformer.cpp  entity_living_base_transformer.h  entity_player_transformer.cpp  entity_player_transformer.h  entry.cpp  glx_hook.cpp  glx_hook.h  gui_ingame_transformer.cpp  gui_ingame_transformer.h  imgui_gui.cpp  imgui_gui.h  jni_bridge.cpp  jni_bridge.h  jvmti_context.cpp  jvmti_context.h  log.cpp  log.h  movement_input_transformer.cpp  movement_input_transformer.h  packet_transformer.cpp  packet_transformer.h  thread_worker.cpp  thread_worker.h  world_render_transformer.cpp  world_render_transformer.h
scripts/examples/: README.md  disabler.java  grim_disabler.java  grim_fly.java  grim_movement_disabler.java  grim_noslow.java  grim_speed.java  grim_velocity.java  packet_queue_disabler.java
